Programando la lista de peliculas en tendencia

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlatziMovies</title>
+    <title>AppFMovies</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,11 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@700;800&family=Red+Hat+Display:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles/app.css" />
   
-    <title>PlatziMovies</title>
+    <title>AppFMovies</title>
 </head>
 
 <body>
-    <h1>PlatziMovies</h1>
+    <h1>AppFMovies</h1>
     <header id="header" class="header-container">
       <span class="header-arrow inactive">&lt;</span>
       <h1 class="header-title">PlatziMovies</h1>
@@ -38,29 +38,15 @@
       </div>
   
       <article class="trendingPreview-movieList">
-        <div class="movie-container">
-          <img
-            src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-            class="movie-img"
-            alt="Nombre de la película"
-          />
-        </div>
   
-        <div class="movie-container">
+        <!-- <div class="movie-container">
           <img
             src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
             class="movie-img"
             alt="Nombre de la película"
           />
-        </div>
-  
-        <div class="movie-container">
-          <img
-            src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-            class="movie-img"
-            alt="Nombre de la película"
-          />
-        </div>
+        </div> -->
+
       </article>
     </section>
   
@@ -161,8 +147,8 @@
     </section>
   
     <footer></footer>
-    <script src="./src/main.js"></script>
     <script src="./src/apiKey.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 
 </html>
