--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div> -->
 
       </article>
-      
+
     </section>
   
     <section id="genericList" class="genericList-container inactive">
@@ -143,6 +143,8 @@
     </section>
   
     <footer></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/apiKey.js"></script>
     <script src="./src/main.js"></script>
 </body>
