Location y hash navigation, agregando navigation.js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>AppFMovies</h1>
     <header id="header" class="header-container">
       <span class="header-arrow inactive">&lt;</span>
-      <h1 class="header-title">PlatziMovies</h1>
+      <h1 class="header-title">AppFMovies</h1>
       <h1 class="header-title header-title--categoryView inactive">Acción</h1>
   
       <form id="searchForm" class="header-searchForm">
@@ -147,6 +147,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/apiKey.js"></script>
     <script src="./src/main.js"></script>
+    <script src="./src/navigation.js"></script>
 </body>
 
 </html>
