--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
       <form id="searchForm" class="header-searchForm">
         <input type="text" placeholder="Vengadores" />
-        <button>🔍</button>
+        <button id="searchBtn">🔍</button>
       </form>
     </header>
   
