--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </article>
     </section>
   
-    <footer>Echo con ❤ por Francisco Morales Sanchez</footer>
+    <footer>Hecho con ❤ por Francisco Morales Sanchez</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/apiKey.js"></script>
